--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
 @layer base {
   html,
   body {
@@ -11,3 +9,19 @@
   }
 }
 
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%); /* Desplazarse completamente a la izquierda */
+  }
+}
+
+.animate-marquee {
+  animation: marquee 20s linear infinite; /* Ajusta la duración según sea necesario */
+  display: flex; /* Asegúrate de que el contenedor sea flexible */
+  width: calc(
+    100% * 2
+  ); /* Asegúrate de que el ancho sea el doble para evitar saltos */
+}
